<resources>
    <string name="app_name">Smart Carpooling</string>
    <string name="action_settings">Settings</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstname">FirstName</string>
    <string name="hint_lasttname">LastName</string>
    <string name="hint_phone">Phone Number</string>
    <string name="radio_owncar">Yes</string>
    <string name="radio_notowncar">No</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="country_name">Nigeria</string>
    <string name="title_activity_direction">DirectionActivity</string>
    <string name="title_activity_places">PlacesActivity</string>

    <string name="google_maps_api_key">AIzaSyCi6OzHL5en14wf2ID0nkWk1i3_09zP5VE</string>
    <string name="browser_api_key">AIzaSyCNld98m-76OZBkKHoAczP6mlQynnlf6LQ</string>
    <string-array name="places">
        <item>ATM</item>
        <item>Bank</item>
        <item>Cafe</item>
        <item>Fire-Station</item>
        <item>Hospital</item>
        <item>Pharmacy</item>
        <item>Police</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
    </string-array>
    <string name="title_activity_search_location">SearchLocationActivity</string>
    <string name="title_activity_auto_complete">AutoCompleteActivity</string>

    <string name="open_activity">Search Places</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
</resources>
